// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen roles config import-export] should create the roles: the roles have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ role [cfgObjectTest]
Completed. 1 object created. 0 object updated. 0 object skipped.
",
}
`;

exports[`[mutagen roles config import-export] should skip the same roles: the roles have not been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= role [cfgObjectTest]
Completed. 0 object created. 0 object updated. 1 object skipped.
",
}
`;

exports[`[mutagen roles config import-export] should update the modified roles: the modified roles have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ role [cfgObjectTest]
Completed. 0 object created. 1 object updated. 0 object skipped.
",
}
`;
